fixed the reused ID issure so now everything reused is a class. Finessed the mobile view and responsiveness. Fixed the issue where the commas weren't following the lines of text by changing the commas from seperate h2 tags to inline span tags. Added an item to thedo to list. Fixed navbar layout issue by learning that you cannot have a media query setup as width < 500, changed to max-width: 500;

--- a/styles/indexStyles.css
+++ b/styles/indexStyles.css
@@ -32,24 +32,26 @@
     color: var(--variable-name);
 }
 
-#equalAndComma {
+.equalAndComma {
     color: white;
+    margin-left: 0em;
 }
 
-#curlyBraces {
+.openCurlyBrace {
     color: var(--curly-braces);
 }
 
 .closeCurlyBrace {
     margin-top: 1.5em;
+    color: var(--curly-braces);
 }
 
-#key {
+.key {
     color: var(--key);
     margin-right: -1.5em;
 }
 
-#value {
+.value {
     color: var(--value);
     margin-right: -2em;
 }
@@ -144,25 +146,23 @@
 /* Galaxy S21 dimensions 360px x 800px */
 /* Actual CSS 412px x 828px */
 /* This query covers a range of other similar devices */
-@media (max-height: 840px) and (width < 500px) {
+@media (max-height: 840px) and (max-width: 500px) {
     .home-container {
         width: 90%;
         max-width: 100%;
-        margin-top: 4em;
+        margin-top: 6em;
         margin-left: 5%;
+        margin-bottom: 20em;
     }
     .home-title {
-        font-size: 20px;
+        font-size: 25px;
     }
     .home-sub {
-        font-size: 12px;
-        max-width: 90%;
+        font-size: 15px;
+        max-width: 65%;
         margin-top: 0;
     }
     .closeCurlyBrace {
         margin-top: 2.5em;
-    }
-    #equalAndComma:last-of-type {
-        color: red;
     }
 }
